Create first couple of blog posts

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,8 @@ website:
         text: Transition from Rmd
       - href: resumes.qmd
         text: Resumes
+      - href: projects.qmd
+        text: Projects
       - href: publications.qmd
         text: Papers
 
