--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,9 @@
 project: 
   type: website
   
+execute: 
+  freeze: auto
+  
 website: 
   page-navigation: true
   title: "N3uralN3twork's Website" 
