Added a Naive Bayes example post

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
     left: "&copy; CC-By Matthias Quinn, 2022"
     
   sidebar:
-    logo: "images/Transhumanism Logo for Website.png"
+    logo: "images/QED Logo.jpg"
     pinned: true
     align: center
     tools: 
