--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -25,14 +25,19 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.2.1'
+          r-version: '4.2.0'
 
+      - name: Check R Packages
+        uses: r-lib/actions/check-r-packages@v2
+        with:
+          extra-packages: any::rcmdcheck
+          needs: check
+          error-on: '"error"'
+          check-dir: '"check"'
+          
       - name: Install R Dependencies
         uses: r-lib/actions/setup-renv@v2
         with:
-          packages: |
-            jsonlite
-            curl
           cache-version: 1
           
 
